@@ -31,6 +31,9 @@ Version SVN trunk (?)
   * Instrument Properties Dialog: Allow -96 dB .. +96 dB and dropped "Gain +6dB"
     checkbox there as well.
   * Instrument Properties Dialog: Show unit for attenuation and pitchbend range.
+  * GIG SOUND FORMAT EXTENSION: Support for additional filter types:
+    lowpass 1/2/4/6-pole, highpass 1/2/4/6-pole, bandpass 2-pole,
+    bandreject 2-pole.
 
 Version 1.1.1 (2019-07-27)
 
